<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">24梯</string>
    <string name="app_version">V1.0.0</string>
    <string name="about_app">关于APP</string>
    <string name="action_settings">设置</string>
    <string name="grabtask_search_info">维保单号、小区名称、所属区域</string>
    <string name="companyDescription">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u002024T(24梯)是上海乐配信息科技有限公司打造的电梯智能化整体托管服务项目，24T的业务宗旨是“我们全心守护电梯”，公司拥有行业领先的电梯物联网监控技术及专业的电梯维保技术支持团队，承接所有电梯品牌的保养与维修业务。\n
\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020公司运用互联网+的运作模式，保证电梯标准化维保业务顺利进行，采用先进的电梯物联网监控平台，对电梯状态进行智能化的24小时动态监控，通过监控电梯安全部件提前预知电梯运行风险，通过强大的互联网数据平台建立维保人员诚信机制及完整的电梯运行数据，确保以国家标准为基础，树立行业服务品牌标杆。\n
\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u002024T为电梯用户、物业、维保人员等建立一个方便、快捷、安全、公开化的网络信息平台及专业化的行业服务。</string>
    <string name="item_privacy">一、总则\n

    1.1、 用户在使用24T服务前，应当仔细阅读《24T用户协议》（以下简称“本协议”）的全部内容，对于本协议中的加重字体、斜体、下划线、颜色标记等条款需重点阅读、理解。\n
    1.2、 用户应当同意本协议的全部条款并按照页面上的提示完成全部的注册程序。用户在进行注册程序过程中点击"注册"按钮即表示用户与24T达成以下协议，完全接受本协议项下的全部条款，本协议即在用户与24T之间产生法律效力，对双方均具有法律约束力。\n
    1.3、 用户注册成功后，24T将给予每个用户一个用户帐号及相应的密码，该用户帐号和密码由用户负责保管；用户应当对以其用户帐号进行的所有活动和事件负法律责任。\n
    1.4、 24T用户协议、各个频道单项服务条款、全部活动条款及公告可由24T随时更新，且无需另行通知。24T有权对上述条款进行修改，修改后的协议一旦公布即有效替代原有协议。用户可随时查询最新协议。用户在使用24T提供的各项服务之前，应仔细阅读本协议及本协议不可分割的各项服务协议。用户在使用相关服务时,应关注并遵守其所适用的相关条款。用户如不同意本服务协议及/或随时对其的修改，可以主动取消24T提供的服务；用户一旦使用24T服务，即视为用户已了解并完全同意本协议及其他服务条款中的各项内容，包括24T对本协议及其他服务条款随时所做的任何修改，并成为24T用户。\n

二、相关定义\n

    2.1、 24T：指北京百度网讯科技有限公司运营和所有的网络交易服务平台（域名：www.nuomi.com）。北京百度网讯科技有限公司通过24T平台向用户和商户提供相关互联网端及移动端交易服务。\n
    2.2、 团购： 指商户通过24T网平台以优惠价格发布商品或服务售卖信息，用户通过24T网平台购买，并凭电子凭证消费的商业活动。\n
    2.3、 团购信息： 指商户通过24T网平台发布的商品或服务售卖信息，包含商品或服务的团购价格、介绍、使用说明等。\n
    2.4、 用户： 指完成24T网平台注册程序，获得可以登陆24T网会员系统权限的正式注册会员。\n
    2.5、 商户： 指通过24T平台发布团购信息，向用户提供团购商品或服务的自然人、法人或其他组织。\n
    2.6、 24T券：简称“糯米券”，指用户通过24T平台购买商户的服务或商品并付款后，24T平台自动向用户以短信或其他形式发放的，用以兑换实际商品或服务的电子凭证。\n
    2.7、 24T抵用券： 指24T通过赠送、市场推广或其他活动向用户提供的可用来抵扣部分团购价款的优惠券，不具有购物凭证的作用。\n
    2.8、 24T储值卡：简称“储值卡”，指商户在24T平台发行和销售的单用途电子预付卡。用户通过24T平台购买特定商户储值卡并付款后，仅可在该商户用以兑换实际商品或服务的预付卡。\n    </string>
    <string name="privacy_item_checkbox">我已阅读并同意使用条款和隐私政策</string>
    <!-- zxing -->
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="common_search_noresult">暂无结果</string>
    <string name="common_no_network_msg">网络不给力，再试试</string>
    <string name="request_error_msg">网络连接错误</string>
    <string name="response_no_object">网络连接错误</string>
    <string name="response_failure_msg">网络连接错误</string>
    <string name="response_no_data">无数据</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="loading_public_default">正在加载...</string>
    <string name="loading_public_sms">正在验证...</string>
    <string name="loading_public_upload">正在上传...</string>
    <string name="loading_public_login">正在登录...</string>
    <string name="loading_public_grabing">正在抢单...</string>
    <string name="day_name_format">EEE</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">MMMM yyyy</string>
    <string name="fault_component">故障部件</string>
    <string name="fault_cause">故障原因</string>
    <string name="fault_cause_electric">电气原因</string>
    <string name="fault_cause_machine">机械原因</string>
    <string name="fault_cause_other">其他原因</string>
    <string name="fault_solve">故障处理</string>
    <string name="fault_peoperty">故障性质</string>
    <string name="fault_duty">故障责任</string>
    <string name="fault_attention">注意事项</string>
    <string name="site_tel">站点电话</string>
    <string name="navigation">地图导航</string>

</resources>